<resources>
    <string name="app_name">Sub2KADE</string>


    <string-array name="data_league_badge">
        <item>@drawable/bundesliga</item>
        <item>@drawable/english_premier_league</item>

        <item>@drawable/la_liga</item>
        <item>@drawable/ligue_1</item>

        <item>@drawable/major_league_soccer</item>
        <item>@drawable/primeira_liga</item>

        <item>@drawable/scottish_premiership</item>
        <item>@drawable/serie_a</item>
        <item>@drawable/ucl</item>
    </string-array>

    <string-array name="data_league_name">
        <item>Bundesliga</item>
        <item>English Premier League</item>
        <item>La Liga</item>
        <item>Ligue 1</item>
        <item>Major League Soccer</item>
        <item>Primeira Liga</item>
        <item>Scottish Premiership</item>
        <item>Serie A</item>
        <item>UEFA Champions League</item>
    </string-array>

    <string-array name="data_id_league">
        <item>4331</item>
        <item>4328</item>

        <item>4335</item>
        <item>4334</item>

        <item>4346</item>
        <item>4344</item>

        <item>4330</item>
        <item>4332</item>
        <item>4480</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev_match">PREV MATCH</string>
    <string name="next_match">NEXT MATCH</string>
    <string name="search_menu">Search Menu</string>
    <string name="soccer">Soccer</string>
    <string name="english_premier_league">English Premier League</string>
    <string name="england">England</string>
    <string name="www_england_com">www.england.com</string>
    <string name="this_is_just_a_preview_of_the_badge">This is just a preview of the badge</string>
    <string name="image_detail_away_team">Image detail away team</string>
    <string name="image_detail_home_team">image_detail_home_team</string>
    <string name="_2020_03_10">2020/03/10</string>
    <string name="line">-</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada Koneksi Internet</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
</resources>
