<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.detail.league.LeagueActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Detail League"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_detail_league_badge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/la_liga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_app_bar_layout"
        android:contentDescription="@string/this_is_just_a_preview_of_the_badge" />

    <TextView
        android:id="@+id/tv_str_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soccer"
        android:fontFamily="@font/arsenal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/img_detail_league_badge"
        app:layout_constraintTop_toBottomOf="@+id/detail_app_bar_layout" />

    <TextView
        android:id="@+id/tv_str_detail_league_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:fontFamily="@font/arsenal"
        android:text="@string/english_premier_league"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_detail_league_badge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_detail_league_badge"
        app:layout_constraintTop_toTopOf="@id/img_detail_league_badge" />

    <TextView
        android:id="@+id/tv_str_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/england"
        android:textColor="@android:color/black"
        android:fontFamily="@font/arsenal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/img_detail_league_badge"
        app:layout_constraintStart_toEndOf="@id/img_detail_league_badge" />

    <TextView
        android:id="@+id/tv_str_web"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/www_england_com"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@id/img_detail_league_badge"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/arsenal"
        app:layout_constraintStart_toEndOf="@id/tv_str_country" />

    <ScrollView
        android:id="@+id/sv_desc"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_detail_league_badge">

        <TextView
            android:id="@+id/tv_detail_league_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/sv_desc" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_match"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>
